src/partials/ApplicantAddForm/style.css
.applicant-add-form__inner {
    background-color: white;
    width: 100%;
}

.applicant-add-form__inner td {
    padding: 16px 0 16px 16px;
    border-top: 1px solid #eeeeee;
    position: relative;
}

.applicant-add-form__error-wrapper {
    padding: 16px;
    top: 66px;
    left: 16px;
    right: 0;
    position: absolute;
    background:#07f;
    box-shadow: 5px 5px 15px rgba(0,0,0,0.15);
    color: #fefefe;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.applicant-add-form__error-wrapper:before {
    content: "";
    width: 0; 
    height: 0; 
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    
    border-bottom: 8px solid #07f;
    text-align: center;
    position: absolute;
    top: -6px;
}

.applicant-add-form__error-wrapper .fa {
    margin-right: 16px;
}

.applicant-add-form__inner td:last-child {
    padding: 16px 16px 16px 16px;
    text-align: right;
}

.applicant-add-form__inner input[type=text],
.applicant-add-form__inner input[type=email] {
    height: 40px;
    padding: 0 16px;
    background-color: #fafafa;
    border: 1px solid #eeeeee;
    outline: 0;
    flex: 1;
    font-size: 16px;
    width: 100%;
}

.applicant-add-form__buttons-wrapper {
    display: block;
}

.applicant-add-form__buttons-wrapper form {
    display: inline-block;
}

.applicant-add-form__buttons-wrapper input {
    height: 40px;
    font-size: 16px;
    border: 0;
    border-radius: 0;
    padding: 0 24px;
    transition: all 0.2s ease;
    cursor: pointer;
    outline: 0;
    font-weight: 400;
}

.applicant-add-form__buttons-wrapper .button-submit {
    background-color: #eeeeee;
    color: #505050;
}

.applicant-add-form__buttons-wrapper .button-submit.active {
    background-color: #07f;
    color: #fff;
}


.applicant-add-form__buttons-wrapper .button-cancel {
    background-color: #eeeeee;
    color: #07f;
}

.applicant-add-form__buttons-wrapper .button-cancel:hover {
    background-color: #cccccc;
}

.applicant-add-form__buttons-wrapper .button-cancel,
.applicant-add-form__buttons-wrapper .button-submit {
    font-weight: 500;
    font-size: 16px;
    margin-left: 8px;
}

